# AIAlchemy-Repo-Governor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: weekly-repo-governor-evidence.yml
audit/multi_repo/2026-06-25/: multi_repo_run_d668a78a.json  repo_AIAlchemy-Repo-Governor_20260625T232517Z.json  repo_Agent-Workflow-Review_20260625T232516Z.json  repo_ai-agent-governance_20260625T232516Z.json  (+13 more)
config/: repo-discovery.yml  repos.generated.yml  repos.yml
docs/: AGENT_SAFETY_MODEL.md  REPO_POLICY_SCHEMA.md  USAGE.md
reports/2026-06-25/: evidence-summary.json  evidence-summary.md  evidence-summary.txt
reports/2026-06-26/: evidence-summary.json  evidence-summary.md  evidence-summary.txt
reports/2026-07-02/: evidence-summary.json  evidence-summary.md  evidence-summary.txt
reports/2026-07-09/: evidence-summary.json  evidence-summary.md  evidence-summary.txt
reports/2026-07-16/: evidence-summary.json  evidence-summary.md  evidence-summary.txt
reports/2026-07-23/: evidence-summary.json  evidence-summary.md  evidence-summary.txt
src/repo_governor/: __init__.py  classifier.py  cli.py  email_delivery.py  evidence_report.py  goal_based_loop.py  multi_repo_runner.py  policy.py  repo_discovery.py  report_analysis.py  reporter.py  scanner.py  security.py
tests/: test_classifier.py  test_clone_handoff.py  test_email_delivery.py  test_goal_based_loop.py  test_multi_repo_runner.py  test_policy.py  test_repo_discovery.py  test_report_prioritization.py  test_reporter.py  test_sanitize.py  test_scanner.py  test_security.py  test_workflow.py
(+89 files in other folders)
