[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-governor"
version = "0.1.0"
description = "AIAlchemy Repo Governor — scan, classify, and prepare repositories for safe AI agent use."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "repository", "governance", "claude", "codex"]
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.scripts]
repo-governor = "repo_governor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_governor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
